--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.20",
     "mariadb": "^2.4.2",
     "morgan": "^1.10.0",
+    "ngrok": "^3.3.0",
     "twilio": "^3.49.4",
     "winston": "^3.3.3"
   },
